--- a/Pico_code/c/CMakeLists.txt
+++ b/Pico_code/c/CMakeLists.txt
@@ -27,4 +27,4 @@ pico_enable_stdio_uart(main 0)
 
 pico_add_extra_outputs(main)
 target_include_directories(main PRIVATE ${CMAKE_CURRENT_LIST_DIR} )
-target_link_libraries(main LCD GUI Config pico_stdlib hardware_spi pico_stdlib pico_stdlib pico_cyw43_arch_lwip_threadsafe_background pico_lwip_http hardware_rtc hardware_flash)
+target_link_libraries(main LCD GUI Config pico_stdlib hardware_spi pico_stdlib pico_cyw43_arch_lwip_threadsafe_background pico_lwip_http hardware_rtc hardware_flash)
